[gd_scene load_steps=39 format=3 uid="uid://bgi84ioegb3g6"]

[ext_resource type="Script" path="res://Scrpits/hud.gd" id="1_ouvyj"]
[ext_resource type="FontFile" uid="uid://uacc8gr3cirm" path="res://Assets/Fonts/G7MakaimuraTtf-xoZm.ttf" id="1_t36q3"]
[ext_resource type="PackedScene" uid="uid://bvlwbq6jwj25q" path="res://Objects/HudObjects/progress_bar3.tscn" id="2_w0elc"]
[ext_resource type="Texture2D" uid="uid://damqmrf6wvbm6" path="res://Assets/UI/Foozle_UI_0001_RPG_Set_1/Panel_1.png" id="3_pk3by"]
[ext_resource type="Texture2D" uid="uid://cidyuesoe1v0t" path="res://Assets/Player/RedHood/idle sheet-Sheet.png" id="4_1xapc"]
[ext_resource type="Texture2D" uid="uid://dn4tolc3fhcvg" path="res://Assets/UI/Foozle_UI_0001_RPG_Set_1/Main_Button_Overlay.png" id="5_ubf2d"]
[ext_resource type="Texture2D" uid="uid://i3kdn8yxp6h8" path="res://Assets/UI/Foozle_UI_0001_RPG_Set_1/Main_Button_Fill.png" id="6_3dpyf"]
[ext_resource type="Texture2D" uid="uid://dwqybr8pbnssm" path="res://Assets/Icons/Inventory_16.png" id="6_w5dld"]
[ext_resource type="Texture2D" uid="uid://c1auk2f75bshk" path="res://Assets/Icons/Sword_13.png" id="7_7fiyl"]
[ext_resource type="Texture2D" uid="uid://bdbe37fj23nff" path="res://Assets/UI/Foozle_UI_0001_RPG_Set_1/Main_Button_BG.png" id="7_abdec"]
[ext_resource type="Texture2D" uid="uid://dn7ay3ws3pmr0" path="res://Assets/Icons/Inventory_6.png" id="7_qgghv"]
[ext_resource type="Texture2D" uid="uid://dpwb7kggo8cka" path="res://Assets/UI/Foozle_UI_0001_RPG_Set_1/Main_Button_Overlay_Light.png" id="9_jv36h"]
[ext_resource type="Texture2D" uid="uid://wwpar4rnrsfk" path="res://Assets/Icons/Quiver_0.png" id="9_kn3ag"]
[ext_resource type="PackedScene" uid="uid://dmr0fcamx7t56" path="res://joystick/virtual_joystick.tscn" id="10_118px"]
[ext_resource type="Texture2D" uid="uid://bjpdv5b80cxo4" path="res://Assets/Icons/Quiver_Ice.png" id="10_b7dfw"]
[ext_resource type="Texture2D" uid="uid://bxnymfjkk0eeq" path="res://Assets/Icons/Armor_11.png" id="10_n5klc"]
[ext_resource type="Texture2D" uid="uid://dkx24vmvl8y54" path="res://Assets/UI/Foozle_UI_0001_RPG_Set_1/Main_Button_Fill_Mana.png" id="10_wym1h"]
[ext_resource type="Texture2D" uid="uid://xm2x8owmvve4" path="res://Assets/Icons/Inventory_18.png" id="11_3fssb"]
[ext_resource type="Texture2D" uid="uid://buv78jq5axbjv" path="res://Assets/Icons/Armor_58.png" id="11_k60nv"]
[ext_resource type="Texture2D" uid="uid://g3ym5qextodv" path="res://Assets/Icons/Quiver_Fire.png" id="11_ncwdy"]
[ext_resource type="Texture2D" uid="uid://ft40g1wsde73" path="res://Assets/Icons/Quiver_Poison.png" id="12_hc4a7"]
[ext_resource type="Texture2D" uid="uid://cri5e427y8r78" path="res://Assets/Background/GameOver/game_over.png" id="25_42ks8"]
[ext_resource type="Texture2D" uid="uid://3sscq6mubilj" path="res://Assets/UI/1. Arrow Left.png" id="25_apy4b"]
[ext_resource type="Texture2D" uid="uid://cixwav6d0t6bp" path="res://Assets/UI/2. Arrow Right.png" id="26_6i4rk"]
[ext_resource type="Texture2D" uid="uid://cu78ite370l6o" path="res://Assets/HUD/BackGround/Blood Cloud Blood Overlay.png" id="26_o2hjc"]
[ext_resource type="AudioStream" uid="uid://c5v86gr878sqt" path="res://Music/BGMUSIC/game-over.mp3" id="27_pw423"]
[ext_resource type="Texture2D" uid="uid://c5rlfloct7gf1" path="res://Assets/UI/3. Arrow Up.png" id="27_v8gds"]
[ext_resource type="Texture2D" uid="uid://cwlbryyecryhi" path="res://Assets/UI/4. Arrow Down.png" id="28_ihw6u"]
[ext_resource type="Texture2D" uid="uid://c12x5cmhly1kk" path="res://Assets/Icons/Skill_47.png" id="29_gno03"]
[ext_resource type="Texture2D" uid="uid://c23bajnl3qn6b" path="res://Assets/Icons/Skill_55.png" id="30_1ohdp"]
[ext_resource type="Texture2D" uid="uid://bg3h0yydww4qp" path="res://Assets/Icons/Skill_60.png" id="31_lo0cy"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_mdf3p"]
color = Color(0, 0.282353, 0.290196, 1)

[sub_resource type="CanvasTexture" id="CanvasTexture_sgb7d"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mtuvj"]
texture = SubResource("CanvasTexture_sgb7d")
modulate_color = Color(1, 0.0588235, 1, 1)

[sub_resource type="Animation" id="Animation_68csp"]
resource_name = "Death"
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BloodCloudBloodOverlay:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.01),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BloodCloudBloodOverlay:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 0.98),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_m7vks"]
resource_name = "Death"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BloodCloudBloodOverlay:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BloodCloudBloodOverlay:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 4.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GameOverSound")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("27_pw423")
}],
"times": PackedFloat32Array(0)
}
tracks/2/use_blend = true

[sub_resource type="Animation" id="Animation_u0qcp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BloodCloudBloodOverlay:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bfn64"]
_data = {
"Death": SubResource("Animation_68csp"),
"GameOver": SubResource("Animation_m7vks"),
"RESET": SubResource("Animation_u0qcp")
}

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_ouvyj")

[node name="ScoreText" type="Label" parent="."]
offset_left = 24.0
offset_top = 9.0
offset_right = 92.0
offset_bottom = 38.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_t36q3")
theme_override_font_sizes/font_size = 20
text = "SCORE: 0"

[node name="MaxScore" type="Label" parent="."]
offset_left = 541.0
offset_top = 8.0
offset_right = 851.0
offset_bottom = 37.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_t36q3")
theme_override_font_sizes/font_size = 20
text = "TOP SCORE: 0"

[node name="Timer" type="Label" parent="."]
offset_left = 1023.0
offset_top = 7.0
offset_right = 1333.0
offset_bottom = 36.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_t36q3")
theme_override_font_sizes/font_size = 20
text = "TIMER: 300"

[node name="Instructions" type="Label" parent="."]
offset_left = 1470.0
offset_top = 13.0
offset_right = 2270.0
offset_bottom = 44.0
theme_override_colors/font_color = Color(0.819608, 0.984314, 0.682353, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_t36q3")
theme_override_font_sizes/font_size = 20
text = "P: PAUSE "

[node name="ProgressBar" parent="." instance=ExtResource("2_w0elc")]
visible = false
scale = Vector2(43.7519, 0.709099)

[node name="ProgressBarLight" type="ProgressBar" parent="."]
visible = false
modulate = Color(0.145098, 1, 1, 1)
clip_contents = true
offset_left = 33.0
offset_top = 167.0
offset_right = 37.0
offset_bottom = 194.0
scale = Vector2(46.5124, 0.544506)
theme_override_styles/background = SubResource("StyleBoxLine_mdf3p")
theme_override_styles/fill = SubResource("StyleBoxTexture_mtuvj")
max_value = 10000.0
step = 1.0
exp_edit = true
show_percentage = false

[node name="BoxContainer" type="BoxContainer" parent="."]
offset_left = -665.0
offset_top = -681.0
offset_right = -625.0
offset_bottom = -641.0
scale = Vector2(0.826383, 0.826383)

[node name="LivesDecorMarc" type="Sprite2D" parent="BoxContainer"]
visible = false
position = Vector2(953, 942)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_pk3by")
flip_h = true

[node name="IconLives1" type="Sprite2D" parent="BoxContainer"]
position = Vector2(824, 938)
scale = Vector2(4, 4)
texture = ExtResource("4_1xapc")
flip_h = true
hframes = 18

[node name="IconLives2" type="Sprite2D" parent="BoxContainer"]
position = Vector2(912, 939)
scale = Vector2(4, 4)
texture = ExtResource("4_1xapc")
flip_h = true
hframes = 18

[node name="IconLives3" type="Sprite2D" parent="BoxContainer"]
position = Vector2(997, 939)
scale = Vector2(4, 4)
texture = ExtResource("4_1xapc")
flip_h = true
hframes = 18

[node name="skills" type="BoxContainer" parent="."]
offset_left = 199.0
offset_top = 178.0
offset_right = 239.0
offset_bottom = 218.0
scale = Vector2(0.826383, 0.826383)

[node name="SwordDecor" type="Sprite2D" parent="skills"]
position = Vector2(564.491, 946.292)
scale = Vector2(2.438, 2.438)
texture = ExtResource("6_w5dld")
flip_h = true

[node name="sword" type="Sprite2D" parent="skills/SwordDecor"]
position = Vector2(-1.23587, -3.05176e-05)
scale = Vector2(1.02543, 1.02543)
texture = ExtResource("7_7fiyl")
flip_h = true

[node name="ButonSword" type="Button" parent="skills/SwordDecor/sword"]
modulate = Color(1, 1, 1, 0)
offset_left = -23.2337
offset_top = -23.2336
offset_right = -15.2337
offset_bottom = -15.2336
scale = Vector2(5.92657, 6.21394)

[node name="ArrowsDecor" type="Sprite2D" parent="skills"]
position = Vector2(790.778, 946.292)
scale = Vector2(2.438, 2.438)
texture = ExtResource("7_qgghv")
flip_h = true

[node name="ButonArrows" type="Button" parent="skills/ArrowsDecor"]
modulate = Color(1, 1, 1, 0)
offset_left = -23.8245
offset_top = -25.8098
offset_right = -15.8245
offset_bottom = -17.8098
scale = Vector2(5.92657, 6.21394)

[node name="arrows0" type="Sprite2D" parent="skills/ArrowsDecor"]
visible = false
position = Vector2(3.05176e-05, -1.98538)
scale = Vector2(1.02543, 1.02543)
texture = ExtResource("9_kn3ag")
flip_h = true

[node name="arrows1" type="Sprite2D" parent="skills/ArrowsDecor"]
visible = false
position = Vector2(3.05176e-05, -1.98538)
scale = Vector2(1.02543, 1.02543)
texture = ExtResource("10_b7dfw")
flip_h = true

[node name="arrows2" type="Sprite2D" parent="skills/ArrowsDecor"]
visible = false
position = Vector2(3.05176e-05, -1.98538)
scale = Vector2(1.02543, 1.02543)
texture = ExtResource("11_ncwdy")
flip_h = true

[node name="arrows3" type="Sprite2D" parent="skills/ArrowsDecor"]
visible = false
position = Vector2(3.05176e-05, -1.98538)
scale = Vector2(1.02543, 1.02543)
texture = ExtResource("12_hc4a7")
flip_h = true

[node name="LabelArrows" type="Label" parent="skills/ArrowsDecor"]
offset_left = 7.94163
offset_top = -23.8246
offset_right = 317.942
offset_bottom = 5.17535
scale = Vector2(0.452977, 0.452977)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_t36q3")
theme_override_font_sizes/font_size = 20
text = "0"

[node name="BootsDecor" type="Sprite2D" parent="skills"]
position = Vector2(1063.05, 946.292)
scale = Vector2(2.438, 2.438)
texture = ExtResource("11_3fssb")
flip_h = true

[node name="boots" type="Sprite2D" parent="skills/BootsDecor"]
visible = false
position = Vector2(6.10352e-05, -3.05176e-05)
scale = Vector2(1.02543, 1.02543)
texture = ExtResource("11_k60nv")
flip_h = true

[node name="LabelBoots" type="Label" parent="skills/BootsDecor"]
offset_left = 7.94163
offset_top = -23.8246
offset_right = 317.942
offset_bottom = 5.17535
scale = Vector2(0.452977, 0.452977)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_t36q3")
theme_override_font_sizes/font_size = 20
text = "0"

[node name="CoatDecor" type="Sprite2D" parent="skills"]
position = Vector2(1305.06, 946.292)
scale = Vector2(2.438, 2.438)
texture = ExtResource("7_qgghv")
flip_h = true

[node name="coat" type="Sprite2D" parent="skills/CoatDecor"]
visible = false
position = Vector2(0.00012207, 0)
scale = Vector2(1.02543, 1.02543)
texture = ExtResource("10_n5klc")
flip_h = true

[node name="LabelCoat" type="Label" parent="skills/CoatDecor"]
offset_left = 3.97082
offset_top = -23.8246
offset_right = 313.971
offset_bottom = 5.17535
scale = Vector2(0.452977, 0.452977)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_t36q3")
theme_override_font_sizes/font_size = 20
text = "0"

[node name="Lives" type="Label" parent="."]
visible = false
offset_left = 441.0
offset_top = 737.0
offset_right = 517.0
offset_bottom = 768.0
scale = Vector2(2.82678, 2.82678)
theme_override_colors/font_color = Color(0.788235, 0, 0.486275, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "LIVES"

[node name="Live" type="Node2D" parent="."]
position = Vector2(91, -115)

[node name="Main_Button_BG" type="Sprite2D" parent="Live"]
position = Vector2(102, 1019)
texture = ExtResource("7_abdec")

[node name="Control" type="Control" parent="Live"]
layout_mode = 3
anchors_preset = 0
offset_left = 276.0
offset_top = 857.0
offset_right = 276.0
offset_bottom = 857.0

[node name="ProgressBarLive" type="TextureProgressBar" parent="Live/Control"]
layout_mode = 0
offset_left = -283.0
offset_right = 98.0
offset_bottom = 324.0
max_value = 213.0
value = 213.0
fill_mode = 3
texture_over = ExtResource("9_jv36h")
texture_progress = ExtResource("6_3dpyf")

[node name="Mana" type="Node2D" parent="."]
position = Vector2(1627, -123)

[node name="Main_Button_BG" type="Sprite2D" parent="Mana"]
position = Vector2(102, 1019)
texture = ExtResource("7_abdec")

[node name="Control" type="Control" parent="Mana"]
layout_mode = 3
anchors_preset = 0
offset_left = 276.0
offset_top = 857.0
offset_right = 276.0
offset_bottom = 857.0

[node name="ProgressBarMana" type="TextureProgressBar" parent="Mana/Control"]
modulate = Color(0.505882, 1, 1, 1)
layout_mode = 0
offset_left = -283.0
offset_right = 98.0
offset_bottom = 324.0
max_value = 213.0
fill_mode = 3
texture_over = ExtResource("5_ubf2d")
texture_progress = ExtResource("10_wym1h")

[node name="Virtual Joystick" parent="." instance=ExtResource("10_118px")]
modulate = Color(0.568627, 0.113725, 0.054902, 0.294118)
offset_left = -32.0
offset_top = -456.0
offset_right = 268.0
offset_bottom = -156.0
scale = Vector2(1.5, 1.5)
visibility_mode = 1
action_left = "Button_Left"
action_right = "Button_Right"
action_up = "Button_Jump"
action_down = "Button_Down"

[node name="Virtual Joystick2" parent="." instance=ExtResource("10_118px")]
visible = false
modulate = Color(0.0862745, 0.305882, 0.584314, 0.294118)
offset_left = 1501.0
offset_top = -463.0
offset_right = 1801.0
offset_bottom = -163.0
scale = Vector2(1.5, 1.5)
visibility_mode = 1
action_left = "ui_fire1"
action_right = "ui_fire2"
action_up = "ui_fire3"
action_down = "ui_fire4"

[node name="GameOver" type="Sprite2D" parent="."]
position = Vector2(960, 424)
texture = ExtResource("25_42ks8")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 808.0
offset_top = 704.0
offset_right = 928.0
offset_bottom = 840.0
scale = Vector2(2.4176, 2.01792)

[node name="StartButton" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("1_t36q3")
text = "Start"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("1_t36q3")
text = "Options
"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_t36q3")
text = "Quit
"

[node name="BloodCloudBloodOverlay" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0)
position = Vector2(963, 543)
texture = ExtResource("26_o2hjc")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bfn64")
}

[node name="TouchScreenButtonLeft" type="TouchScreenButton" parent="."]
visible = false
position = Vector2(-16, 784)
scale = Vector2(10, 10)
texture_normal = ExtResource("25_apy4b")
action = "Button_Left"

[node name="TouchScreenButtonRight" type="TouchScreenButton" parent="."]
visible = false
position = Vector2(278, 782)
scale = Vector2(10, 10)
texture_normal = ExtResource("26_6i4rk")
action = "Button_Right"

[node name="TouchScreenButtonUp" type="TouchScreenButton" parent="."]
visible = false
position = Vector2(129, 642)
scale = Vector2(10, 10)
texture_normal = ExtResource("27_v8gds")
action = "Button_Jump"

[node name="TouchScreenButtonDown" type="TouchScreenButton" parent="."]
visible = false
position = Vector2(133, 933)
scale = Vector2(10, 10)
texture_normal = ExtResource("28_ihw6u")
action = "Button_Down"

[node name="TouchScreenButtonSwordAttack" type="TouchScreenButton" parent="."]
position = Vector2(1529, 792)
scale = Vector2(2, 2)
texture_normal = ExtResource("29_gno03")
action = "Button_SwordAttack"

[node name="TouchScreenButtonBowShooting" type="TouchScreenButton" parent="."]
position = Vector2(1678, 645)
scale = Vector2(2, 2)
texture_normal = ExtResource("30_1ohdp")
action = "Button_BowShooting"

[node name="TouchScreenButtonMagicMana" type="TouchScreenButton" parent="."]
position = Vector2(1824, 797)
scale = Vector2(2, 2)
texture_normal = ExtResource("31_lo0cy")
action = "Button_MagicMana"

[connection signal="pressed" from="skills/SwordDecor/sword/ButonSword" to="." method="_on_buton_sword_pressed"]
[connection signal="pressed" from="skills/ArrowsDecor/ButonArrows" to="." method="_on_buton_arrows_pressed"]
[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
